--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "AxsFmYH6NnFx"
       },
@@ -615,7 +615,7 @@
         "id": "aBA18VHFoDV0",
         "outputId": "49307926-e67f-44e5-e43c-934b00b058e3"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -643,7 +643,7 @@
         "id": "d3es9eokpLGL",
         "outputId": "3a891c8d-3e39-45e2-bf31-7eb1daa265e9"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -671,7 +671,7 @@
         "id": "hTeZHjY0pw2h",
         "outputId": "f0de29b3-2dbb-4401-fca1-1a1e9571b562"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -707,7 +707,7 @@
         "id": "5YUIe37yq6gN",
         "outputId": "d3086b21-45ba-4685-fd75-b258288ef3b6"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -737,7 +737,7 @@
         "id": "4PW5eRuBr-fq",
         "outputId": "ebc92b7a-b991-46e0-ba4d-6f94b2836001"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -767,7 +767,7 @@
         "id": "tYM3xBqhu98j",
         "outputId": "df042da7-68ed-417c-c6aa-e1056b3eca08"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -794,7 +794,7 @@
         "id": "B956eVPsx6jo",
         "outputId": "ef5099be-8448-4493-d527-bb24a84a2a01"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -826,16 +826,459 @@
           "height": 130
         },
         "id": "N1qUiDryy2GS",
-        "outputId": "2493adea-8e49-4bd6-9177-c179ec8230db"
+        "outputId": "f236ad8f-209a-4de9-c3af-5a8fb053aef4"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
           "ename": "IndentationError",
           "evalue": "ignored",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-31-04913ac1f1c7>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    while(n>0)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-04913ac1f1c7>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    while(n>0)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " def sum(a,b):\n",
+        "  return(a+b)\n",
+        "print(sum(10,70))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fV35UQitmnbW",
+        "outputId": "b6d463df-bd28-4ec3-d98a-124c02c5f68a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "80\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def adding(x,y):\n",
+        "  i=x+y\n",
+        "  return i\n",
+        "result=adding(16,25)\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kiJGrAZUnYa3",
+        "outputId": "97f19e32-de87-4279-a379-ffd41fcb9576"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "41\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rows=int(input(\"enter no of rows\"))\n",
+        "for i in range(0,rows+1):\n",
+        "  for j in range(i):\n",
+        "    print(i,end =\" \")\n",
+        "  print()\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RWN-dHteof12",
+        "outputId": "3c98cefc-8a54-4401-a2ca-8c959ba3a4e5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter no of rows5\n",
+            "\n",
+            "1 \n",
+            "2 2 \n",
+            "3 3 3 \n",
+            "4 4 4 4 \n",
+            "5 5 5 5 5 \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rows=int(input(\"enter no of rows\"))\n",
+        "for i in range(rows,0,-1):\n",
+        "  n=i\n",
+        "  for j in range(0,i):\n",
+        "    print(i,end =\" \")\n",
+        "  print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K4Dx2OQQrZRi",
+        "outputId": "ecf0fbb3-58bd-4ad3-f41b-9c311845dee7"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter no of rows5\n",
+            "5 5 5 5 5 \n",
+            "4 4 4 4 \n",
+            "3 3 3 \n",
+            "2 2 \n",
+            "1 \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def greet():\n",
+        "  #local variable\n",
+        "  message='hello'\n",
+        "  print('local',message)\n",
+        "\n",
+        "greet()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "021CcLrIr5gg",
+        "outputId": "ba5c730b-0389-4b29-ea64-8c037634a52f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "local hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def greet():\n",
+        "  #local variable\n",
+        "  message='hello'\n",
+        "  print('local',message)\n",
+        "\n",
+        "greet()\n",
+        "message='ABIT CES'\n",
+        "print(message)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nU53cxratPax",
+        "outputId": "5d62d74a-6a78-4f58-afc7-ef7d43230175"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "local hello\n",
+            "ABIT CES\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "add=lambda num:num+4\n",
+        "print(add(6))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uo4HYETytykA",
+        "outputId": "7df1e7ab-43cc-4e4a-d464-3c04911038b6"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=lambda x,y:x+y\n",
+        "print(a(1,2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o696nvgAvtPW",
+        "outputId": "6b0083b2-9534-406e-bfe5-ee420448024f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def factorial(x):\n",
+        " if x==1:\n",
+        "  return 1\n",
+        " else:\n",
+        "  return(x*factorial(x-1))\n",
+        "num=int(input('num=?'))\n",
+        "print(\"the factorial of\",num,\"is\",factorial(num))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lVIKBjmiwbcg",
+        "outputId": "2c6ed7d8-f0ba-4409-f817-f3d71575d480"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "num=?6\n",
+            "the factorial of 6 is 720\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nterms = int(input(\"How many terms? \"))\n",
+        "n1, n2 = 0,1\n",
+        "count = 0\n",
+        "if nter"
+      ],
+      "metadata": {
+        "id": "4RHQrojw0i6b"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "pie=math.pi\n",
+        "print(\"the value of pi is :\",pie)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7b0jfMKI1pgC",
+        "outputId": "b852a2a5-afc8-40a2-ae64-c64044be0975"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "the value of pi is : 3.141592653589793\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math as sushree\n",
+        "pie=sushree.pi\n",
+        "print(\"the value of pi is :\",pie)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZZ_Zhbw22GZ7",
+        "outputId": "2e4039ac-859d-40a5-a494-2b73672c5da4"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "the value of pi is : 3.141592653589793\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "for i in range(10):\n",
+        "  print(random.randint(1,25))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m1tC7pSt2SX0",
+        "outputId": "33420e7a-6a62-49e2-cb88-644e3f3cab9e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "24\n",
+            "8\n",
+            "24\n",
+            "3\n",
+            "9\n",
+            "10\n",
+            "5\n",
+            "25\n",
+            "21\n",
+            "22\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "import math \n",
+        "for i in range(5):\n",
+        "  print(random.randint(1,25))\n",
+        "print(math.pi)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aYujqK2p3ETR",
+        "outputId": "d47c06be-41f3-48c9-f598-bf43a129fa5c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "25\n",
+            "22\n",
+            "15\n",
+            "11\n",
+            "19\n",
+            "3.141592653589793\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class myclass:\n",
+        "  a=100\n",
+        "  def fun(self):\n",
+        "    print('hello class')\n",
+        "obj=myclass()\n",
+        "print(obj.a)\n",
+        "obj.fun()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AzkESjHvIM-7",
+        "outputId": "5cd01bab-1f80-4da2-eb82-d078e8986017"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100\n",
+            "hello class\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class myclass:\n",
+        "  def __init__(self,name):\n",
+        "     print(\"hello\",name)\n",
+        "obj = myclass(\"sushree\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xozp2otqJx5N",
+        "outputId": "6227f6f7-5907-4741-febc-45c71c62ef08"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello sushree\n"
           ]
         }
       ]
@@ -844,7 +1287,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOprUL72dAiGNXIGbLFi0+t",
+      "authorship_tag": "ABX9TyMRrQqANA7y5ftAdkZbmpD4",
       "include_colab_link": true
     },
     "kernelspec": {
