--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -1282,12 +1282,58 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class a:\n",
+        "   def __init__(self,n):\n",
+        "    for i in range(n+1):\n",
+        "      for j in range(i):\n",
+        "        print(i,end='')\n",
+        "      print()\n",
+        "n=int(input(\"Enter the no.of rows\"))\n",
+        "obj=a"
+      ],
+      "metadata": {
+        "id": "EwLaeZ9GMpP1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class animal:\n",
+        "  def speak(self):\n",
+        "    print(\"animal speaking\")\n",
+        "class dog(animal):\n",
+        "  def bark(self):\n",
+        "    print(\"dog breaking\")\n",
+        "d=Dog()\n",
+        "d.bark()\n",
+        "d.speak()"
+      ],
+      "metadata": {
+        "id": "NqPjJDjLOKnR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "GcBazGZZOKi1"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMRrQqANA7y5ftAdkZbmpD4",
+      "authorship_tag": "ABX9TyMpEXQ3TUpf+EItfp+7wnN+",
       "include_colab_link": true
     },
     "kernelspec": {
