--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -1245,7 +1245,7 @@
         "id": "AzkESjHvIM-7",
         "outputId": "5cd01bab-1f80-4da2-eb82-d078e8986017"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1272,7 +1272,7 @@
         "id": "xozp2otqJx5N",
         "outputId": "6227f6f7-5907-4741-febc-45c71c62ef08"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1322,18 +1322,262 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#write a python program the base class contains addition of 2 numbers but the derived class contains mul of same nos\n",
+        "class a():\n",
+        "  def sum(self,a,b):\n",
+        "    return a+b\n",
+        "class b(a):\n",
+        "  def mul(self,a,b):\n",
+        "    return a*b\n",
+        "d=b()\n",
+        "a=int(input(\"Enter 1st number..\"))\n",
+        "b=int(input(\"Enter 2nd number..\"))\n",
+        "print(d.sum(a,b))\n",
+        "print(d.mul(a,b))\n"
+      ],
       "metadata": {
-        "id": "GcBazGZZOKi1"
+        "id": "GcBazGZZOKi1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "89d6367b-2542-47a6-df3e-206997eed7f7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter 1st number..5\n",
+            "Enter 2nd number..8\n",
+            "13\n",
+            "40\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "#write a python program using multilevel inheritance which contain four derived class and only one derived class\n",
+        "class A():\n",
+        "  def sum(self,a,b):\n",
+        "    return a+b\n",
+        "class B(A):\n",
+        "   def sub(self,a,b):\n",
+        "     return a-b\n",
+        "class C(B):\n",
+        " def mul(self,a,b):\n",
+        "     return a*b\n",
+        "class D(C):\n",
+        " def div(self,a,b):\n",
+        "     return a/b\n",
+        "class E(D):\n",
+        "  def rem(self,a,b):\n",
+        "     return a%b\n",
+        "d=E()\n",
+        "a=int(input('INPUT a='))\n",
+        "b=int(input('INPUT b='))\n",
+        "print(d.sum(a,b))\n",
+        "print(d.sub(a,b))\n",
+        "print(d.mul(a,b))\n",
+        "print(d.div(a,b))\n",
+        "print(d.rem(a,b))\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mYGrwwbqt-Pl",
+        "outputId": "917cae8f-9620-4311-86f4-70fca65d1cde"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "INPUT a=12\n",
+            "INPUT b=2\n",
+            "14\n",
+            "10\n",
+            "24\n",
+            "6.0\n",
+            "0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "print(np.__version__)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hX9kOfb43nA2",
+        "outputId": "a88bb2d3-0cd5-4d19-a497-fc7af8a828a1"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.22.4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy\n",
+        "list=[10,20,30,40,50]\n",
+        "arr=numpy.array(list)\n",
+        "print(arr)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FJk9RLfg5CuS",
+        "outputId": "49a3fafa-e175-401e-bd64-c0cdcc1d79af"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10 20 30 40 50]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "list=[10,20,30,40,50]\n",
+        "arr=np.array(list)\n",
+        "print('Size:',arr.size)\n",
+        "print('Datatype:',arr.dtype)\n",
+        "print('dimension:',arr.ndim)\n",
+        "print('shape:',arr.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W_Vh84Vu58Ki",
+        "outputId": "5ac6224d-9758-45d7-f75b-b45396554f87"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Size: 5\n",
+            "Datatype: int64\n",
+            "dimension: 1\n",
+            "shape: (5,)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "list=[[10,20,30],[40,50,60]]\n",
+        "arr=np.array(list)\n",
+        "print(arr)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fEW0HNzv68cL",
+        "outputId": "be4c81f9-ab92-418d-9a2a-93827925d592"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[10 20 30]\n",
+            " [40 50 60]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "list=[[10,20,30],[40,50,60]]\n",
+        "arr=np.array(list)\n",
+        "print(arr[1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UOKKg_Vy7hrz",
+        "outputId": "a998831d-6b3d-4df7-822e-325059f70570"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[40 50 60]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "list=[[10,20,30],[40,50,60]]\n",
+        "arr=np.array(list)\n",
+        "print(arr[1][1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QTHBbfEJ75th",
+        "outputId": "050a63f4-398b-487d-d293-66cf26e71117"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "50\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMpEXQ3TUpf+EItfp+7wnN+",
+      "authorship_tag": "ABX9TyPXB4lEvznCkHmwUtpecStB",
       "include_colab_link": true
     },
     "kernelspec": {
