--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -1572,12 +1572,135 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "three_dimensional_list=[[[1,2,3],[4,5,6],[7,8,9]]]\n",
+        "three_dimensional_arr=np.array(three_dimensional_list)\n",
+        "print(\"3D array is:\",three_dimensional_arr)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HGOaGPIm9x5A",
+        "outputId": "83218392-5ac9-4a2c-e628-07d115ce12f9"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3D array is: [[[1 2 3]\n",
+            "  [4 5 6]\n",
+            "  [7 8 9]]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "list=[10,20,30,40,50,60]\n",
+        "arr=np.array(list)\n",
+        "print('Element')\n",
+        "for ele in arr:\n",
+        "  print(ele)#Without index."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aSAri6p7-qo8",
+        "outputId": "61add92b-9b9a-4804-e3db-83bb91c0ae0f"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Element\n",
+            "10\n",
+            "20\n",
+            "30\n",
+            "40\n",
+            "50\n",
+            "60\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "list=[10,20,30,40,50,60]\n",
+        "arr=np.array(list)\n",
+        "print('Element')\n",
+        "for ele in arr:\n",
+        "  print(ele*2)#Without index."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XWHiR_Pr_Osp",
+        "outputId": "bca4e5c8-1f38-45b7-ffa1-01828f4f65d2"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Element\n",
+            "20\n",
+            "40\n",
+            "60\n",
+            "80\n",
+            "100\n",
+            "120\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "ndArray=np.array([1,2,3,4,],ndmin=6)\n",
+        "print(ndArray)\n",
+        "print('Dimensions of array:',ndArray.ndim)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dGpiOEQC_iFj",
+        "outputId": "4cd4000c-8428-44be-bc49-a6efbd2aea2f"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[[[[1 2 3 4]]]]]]\n",
+            "Dimensions of array: 6\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXB4lEvznCkHmwUtpecStB",
+      "authorship_tag": "ABX9TyO6ZimAKqZmjgiN5ZbqIksO",
       "include_colab_link": true
     },
     "kernelspec": {
