--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -1343,7 +1343,7 @@
         },
         "outputId": "89d6367b-2542-47a6-df3e-206997eed7f7"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1395,7 +1395,7 @@
         "id": "mYGrwwbqt-Pl",
         "outputId": "917cae8f-9620-4311-86f4-70fca65d1cde"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1425,7 +1425,7 @@
         "id": "hX9kOfb43nA2",
         "outputId": "a88bb2d3-0cd5-4d19-a497-fc7af8a828a1"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1451,7 +1451,7 @@
         "id": "FJk9RLfg5CuS",
         "outputId": "49a3fafa-e175-401e-bd64-c0cdcc1d79af"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1480,7 +1480,7 @@
         "id": "W_Vh84Vu58Ki",
         "outputId": "5ac6224d-9758-45d7-f75b-b45396554f87"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1509,7 +1509,7 @@
         "id": "fEW0HNzv68cL",
         "outputId": "be4c81f9-ab92-418d-9a2a-93827925d592"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1536,7 +1536,7 @@
         "id": "UOKKg_Vy7hrz",
         "outputId": "a998831d-6b3d-4df7-822e-325059f70570"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1562,7 +1562,7 @@
         "id": "QTHBbfEJ75th",
         "outputId": "050a63f4-398b-487d-d293-66cf26e71117"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1588,7 +1588,7 @@
         "id": "HGOaGPIm9x5A",
         "outputId": "83218392-5ac9-4a2c-e628-07d115ce12f9"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1618,7 +1618,7 @@
         "id": "aSAri6p7-qo8",
         "outputId": "61add92b-9b9a-4804-e3db-83bb91c0ae0f"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1652,7 +1652,7 @@
         "id": "XWHiR_Pr_Osp",
         "outputId": "bca4e5c8-1f38-45b7-ffa1-01828f4f65d2"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1684,7 +1684,7 @@
         "id": "dGpiOEQC_iFj",
         "outputId": "4cd4000c-8428-44be-bc49-a6efbd2aea2f"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1695,12 +1695,103 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "list=[[10,20,30],[40,50,60],[70,80,90]]\n",
+        "arr=np.array(list)\n",
+        "print(arr)\n",
+        "print('slicing.......')\n",
+        "res=arr[:,:]\n",
+        "print(res)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9kutNDuKevto",
+        "outputId": "88fd9b4a-7ea5-4314-88c8-739b59dba810"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[10 20 30]\n",
+            " [40 50 60]\n",
+            " [70 80 90]]\n",
+            "slicing.......\n",
+            "[[10 20 30]\n",
+            " [40 50 60]\n",
+            " [70 80 90]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy \n",
+        "n=int(input('Enter size:'))\n",
+        "arr=numpy.ndarray(shape=(n),dtype=int)\n",
+        "print('enter %d element:'%n)\n",
+        "def oddcount(a,o):\n",
+        "  if a% 2!=0:\n",
+        "    0+=1\n",
+        "  return 0\n",
+        "def even\n"
+      ],
+      "metadata": {
+        "id": "PPmXUt99f2Ey"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "str='abit is an engineering college'\n",
+        "print(str[0:27:5])\n",
+        "str1=slice(0,27,3)\n",
+        "str2=str[str1]\n",
+        "print(str2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VSxUWuIajdEN",
+        "outputId": "394f5543-e209-4a8e-f727-e5528c6d8fd3"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ai nnl\n",
+            "atsnnnrgo\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "AUxtw3rdjzWX"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO6ZimAKqZmjgiN5ZbqIksO",
+      "authorship_tag": "ABX9TyOjoEM0mB2Lh5iG2C4CKCU6",
       "include_colab_link": true
     },
     "kernelspec": {
